--- a/app/index.html
+++ b/app/index.html
@@ -3,22 +3,31 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>ChatApp</title>
+    <title>ChatAppEmber</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {{content-for "head"}}
 
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
-    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/chat-app.css">
+    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/chat-app-ember.css">
+    <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+
 
     {{content-for "head-footer"}}
   </head>
   <body>
+
+      <nav class="navbar navbar-expand-lg navbar-light bg-light red-gradient-background">
+          <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample08">
+            <h2>Realtime chat app</h2>
+          </div>
+        </nav>
+
     {{content-for "body"}}
 
     <script src="{{rootURL}}assets/vendor.js"></script>
-    <script src="{{rootURL}}assets/chat-app.js"></script>
+    <script src="{{rootURL}}assets/chat-app-ember.js"></script>
 
     {{content-for "body-footer"}}
   </body>
